--- a/entradas.html
+++ b/entradas.html
@@ -1,7 +1,7 @@
 <HTML lang="es">
   <HEAD>
 <TITLE>Bienvenido a Citadinos</TITLE>
-<STYLE>
+    <STYLE>
       td {
         color: #000000;
         text-decoration: none;
@@ -22,7 +22,7 @@
         font-size: 13px;
         line-height: 13px;
         padding:0;
-        margin:0;  
+        margin:0;
       }
     </STYLE>
 
@@ -38,7 +38,7 @@
           }
         }
       }
-    </SCRIPT> 
+    </SCRIPT>
     <NOSCRIPT><B><FONT COLOR=RED>Esta página usa scripts!!!</FONT></B></NOSCRIPT>
 
   </HEAD>
@@ -54,6 +54,8 @@
       <TR>
         <TD WIDTH=10px BACKGROUND=./img/border_left.gif><IMG SRC=./img/border_left.gif WIDTH=10px></TD>
         <TD WIDTH=780px ALIGN=CENTER>
+
+    <!-- HEADER CONTENT -->
     <TABLE WIDTH=780px HEIGHT=144px BORDER=0px CELLSPACING=0px CELLPADDING=0px BGCOLOR=WHITE>
       <TR HEIGHT=86px>
         <TD WIDTH=443px BACKGROUND=./img/top_logo_next.gif VALIGN=MIDDLE><DIV><A HREF=index.html><IMG BORDER=0 SRC=./img/top_logo.gif WIDTH=443px HEIGHT=86px ALT="Citadinos"></A></DIV></TD>
@@ -89,7 +91,7 @@
           <TABLE WIDTH=780px BORDER=0px CELLSPACING=0px CELLPADDING=0px>
             <TR HEIGHT=25px>
               <TD BGCOLOR="#EDEDED" WIDTH=380px><FONT COLOR=BLACK FACE=Verdana SIZE=2>&nbsp;&nbsp;<B>Tránsito:</B> Obras en la Avenida Central</FONT></TD>
-              <TD BGCOLOR="#FFFFFF" ALIGN=RIGHT ID="WEATHER"><FONT COLOR=BLACK FACE=Verdana SIZE=2><B>Hoy:</B> 
+              <TD BGCOLOR="#FFFFFF" ALIGN=RIGHT ID="WEATHER"><FONT COLOR=BLACK FACE=Verdana SIZE=2><B>Hoy:</B>
                 <SCRIPT LANGUAGE="JavaScript">
                   var now = new Date();
                   var days = new Array('Domingo', 'Lunes', 'Martes', 'Miércoles', 'Jueves', 'Viernes', 'Sábado');
@@ -113,49 +115,105 @@
         <TD COLSPAN=5>&nbsp;</TD>
       </TR>
     </TABLE>
+    <!-- HEADER CONTENT -->
+
+    <!-- BODY CONTENT -->
     <TABLE WIDTH=780px BORDER=0px CELLSPACING=0px CELLPADDING=0px BGCOLOR=WHITE>
       <TR WIDTH=780px>
+
+        <!-- MENU CONTENT -->
         <TD WIDTH=155px BGCOLOR=#E4E4E4 VALIGN=TOP>
-          <TABLE WIDTH=155px BORDER=0px CELLSPACING=0px CELLPADDING=0px>
+          <TABLE WIDTH=155px BORDER=0px CELLSPACING=0px CELLPADDING=0px datatable="0">
+
             <TR HEIGHT=1px>
-              <TD WIDTH=155px BACKGROUND=./img/marker2_w.gif><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
-              <TD WIDTH=1px BACKGROUND=./img/marker2_t.gif ROWSPAN=9 VALIGN=TOP><IMG SRC=./img/marker2_t.gif WIDTH=1 HEIGHT=30px></TD>
+              <TD WIDTH=155px BACKGROUND=./img/marker2_w.gif>
+                <IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px alt="">
+              </TD>
+              <TD WIDTH=1px BACKGROUND=./img/marker2_t.gif ROWSPAN=9 VALIGN=TOP>
+                <IMG SRC=./img/marker2_t.gif WIDTH=1 HEIGHT=30px alt="">
+              </TD>
             </TR>
+
             <TR HEIGHT=34px>
-              <TD WIDTH=154px bgcolor="#EDEDED" id="home" onMouseOver="switchImage('nav_home', './img/nav_home2.gif'); ChangeColor('home','#FFF')" onMouseOut="switchImage('nav_home', './img/nav_home.gif'); ChangeColor('home','#EDEDED')"><A HREF="javascript:location.href='index.html';" style="outline: none;"><img name="nav_home" src=./img/nav_home.gif width=91 height=27 hspace="15" border=0px></a></TD>
+              <TD WIDTH=154px bgcolor="#EDEDED" id="home" onMouseOver="switchImage('nav_home', './img/nav_home2.gif'); ChangeColor('home','#FFF')" onMouseOut="switchImage('nav_home', './img/nav_home.gif'); ChangeColor('home','#EDEDED')">
+                <A HREF="javascript:location.href='index.html';" style="outline: none;">
+                  <img name="nav_home" src=./img/nav_home.gif width=91 height=27 hspace="15" border=0px alt="Inicio">
+                </a>
+              </TD>
             </TR>
+
             <TR HEIGHT=1px>
-              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif>
+                <IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px alt="">
+              </TD>
             </TR>
+
             <TR HEIGHT=34px>
-              <TD WIDTH=154px bgcolor="#EDEDED" id="news" onMouseOver="switchImage('nav_news', './img/nav_news2.gif'); ChangeColor('news','#FFF')" onMouseOut="switchImage('nav_news', './img/nav_news.gif'); ChangeColor('news','#EDEDED')"><A HREF="javascript:location.href='noticias.html';" style="outline: none;"><IMG SRC=./img/nav_news.gif name="nav_news" WIDTH=111 HEIGHT=21 hspace="12" BORDER=0px></A></TD>
+              <TD WIDTH=154px bgcolor="#EDEDED" id="news" onMouseOver="switchImage('nav_news', './img/nav_news2.gif'); ChangeColor('news','#FFF')" onMouseOut="switchImage('nav_news', './img/nav_news.gif'); ChangeColor('news','#EDEDED')">
+                <A HREF="javascript:location.href='noticias.html';" style="outline: none;">
+                  <IMG SRC=./img/nav_news.gif name="nav_news" WIDTH=111 HEIGHT=21 hspace="12" BORDER=0px alt="Noticias">
+                </A>
+              </TD>
             </TR>
+
             <TR HEIGHT=1px>
-              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif>
+                <IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px alt="">
+              </TD>
             </TR>
+
             <TR HEIGHT=34px>
-              <TD WIDTH=154px bgcolor="#EDEDED" id="tickets" onMouseOver="switchImage('nav_facts', './img/nav_facts2.gif'); ChangeColor('tickets','#FFF')" onMouseOut="switchImage('nav_facts', './img/nav_facts.gif'); ChangeColor('tickets','#EDEDED')"><A HREF="javascript:location.href='entradas.html';" style="outline: none;"><IMG name="nav_facts" SRC=./img/nav_facts.gif WIDTH=116 HEIGHT=23 hspace="9" BORDER=0px></A></TD>
+              <TD WIDTH=154px bgcolor="#EDEDED" id="tickets" onMouseOver="switchImage('nav_facts', './img/nav_facts2.gif'); ChangeColor('tickets','#FFF')" onMouseOut="switchImage('nav_facts', './img/nav_facts.gif'); ChangeColor('tickets','#EDEDED')">
+                <A HREF="javascript:location.href='entradas.html';" style="outline: none;">
+                  <IMG name="nav_facts" SRC=./img/nav_facts.gif WIDTH=116 HEIGHT=23 hspace="9" BORDER=0px alt="Entradas">
+                </A>
+              </TD>
             </TR>
+
             <TR HEIGHT=1px>
-              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif>
+                <IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px alt="">
+              </TD>
             </TR>
+
             <TR HEIGHT=34px>
-              <TD WIDTH=154px bgcolor="#EDEDED" id="survey" onMouseOver="switchImage('nav_survey', './img/nav_survey2.gif'); ChangeColor('survey','#FFF')" onMouseOut="switchImage('nav_survey', './img/nav_survey.gif'); ChangeColor('survey','#EDEDED')"><A HREF="javascript:location.href='encuesta.html';" style="outline: none;"><IMG SRC=./img/nav_survey.gif name="nav_survey" WIDTH=122 HEIGHT=32 hspace="8" BORDER=0px></A></TD>
+              <TD WIDTH=154px bgcolor="#EDEDED" id="survey" onMouseOver="switchImage('nav_survey', './img/nav_survey2.gif'); ChangeColor('survey','#FFF')" onMouseOut="switchImage('nav_survey', './img/nav_survey.gif'); ChangeColor('survey','#EDEDED')">
+                <A HREF="javascript:location.href='encuesta.html';" style="outline: none;">
+                  <IMG SRC=./img/nav_survey.gif name="nav_survey" WIDTH=122 HEIGHT=32 hspace="8" BORDER=0px alt="Encuesta">
+                </A>
+              </TD>
             </TR>
+
             <TR HEIGHT=1px>
-              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+              <TD WIDTH=154px BACKGROUND=./img/marker2_w.gif>
+                <IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px alt="">
+              </TD>
             </TR>
+
           </TABLE>
         </TD>
+        <!-- MENU CONTENT -->
+
+        <!-- SPACE -->
         <TD WIDTH=20px><IMG SRC=./img/blank_5x5.gif WIDTH=20px HEIGHT=5px></TD>
+        <!-- SPACE -->
+
+        <!-- BODY CONTENT -->
         <TD WIDTH=625px HEIGHT="600px" VALIGN=TOP id="principal">
-          <p style="padding-top:5px;"><img src="./img/headline_ticket_offers.gif" border="0"></p>
+          <h1 style="padding-top:5px;" class="titulo">
+            Entradas para recitales en Citadinos
+          </h1>
           <table style="border; border: 1px dashed Silver; margin:0px;" width="600px">
             <tr>
-              <td><p>Citadinos en asociación con Humo Entretenimiento S.A. se complace en anunciar precios especiales para las entradas de estos grandes artistas - <i><b>Los Enfermeros y The Great Obelisk.</b></i></p>
-              <p>Estas <big style="font-weight:bold;">ofertas especiales</big> son exclusivas para Citadinos y se pueden comprar sólo llamando a nuestra línea de entradas:</p></td>
-              <td valign="top" align="center" width="300px"><DIV><b>fechas de los recitales</b>
-                <table width="250px" border="1" bordercolor="#C0C0C0" rules="rows">
+              <td>
+                <p>Citadinos en asociación con Humo Entretenimiento S.A. se complace en anunciar precios especiales para las entradas de estos grandes artistas - <i><b>Los Enfermeros y The Great Obelisk.</b></i></p>
+                <p>Estas <big style="font-weight:bold;">ofertas especiales</big> son exclusivas para Citadinos y se pueden comprar sólo llamando a nuestra línea de entradas:</p>
+              </td>
+
+              <td valign="top" align="center" width="300px">
+              <div>
+                <b>fechas de los recitales</b>
+                <table width="250px" border="1" bordercolor="#C0C0C0" rules="rows" datatable="0">
                   <tr bgcolor="#A9B8BF">
                     <td><b><font color="41545D">Los Enfermeros</font></b></td>
                     <td><b><font color="41545D">The Great Obelisk</font></b></td>
@@ -164,14 +222,21 @@
                     <td>12/2/13</td>
                     <td>24/3/13</td>
                   </tr>
-                </table></DIV>
+                </table>
+              </div>
               </td>
             </tr>
             <tr bgcolor="#EDEDED">
               <td colspan="2" align="center">
                 <table width="550px" cellpadding="0" cellspacing="0" border="0">
-                  <td valign="middle" align="right" width="430px" style="border:0px;margin:0px;padding:0px;">Compre entradas llamando a la línea de la M U S I C A ---- llame ya!:&nbsp;</td>
-                  <td valign="middle" align="left" width="120px" style="border:0px;margin:0px;padding:0px;"><DIV><img src="./img/telefon_lightgrey_bg.gif" alt="número de la línea de la música" border="0" valign="absmiddle"></div></td>
+                  <td valign="middle" align="right" width="430px" style="border:0px;margin:0px;padding:0px;">
+                    Compre entradas llamando a la línea de la M U S I C A ---- llame ya!:&nbsp;
+                  </td>
+                  <td valign="middle" align="left" width="120px" style="border:0px;margin:0px;padding:0px;">
+                    <DIV>
+                      <img src="./img/telefon_lightgrey_bg.gif" alt="número de la línea de la música" border="0" valign="absmiddle">
+                    </div>
+                  </td>
                 </table>
               </td>
             </tr>
@@ -249,24 +314,31 @@
             </td></tr>
             <tr bgcolor="#ffffff" >
               <td style="padding:20px 5px 5px 5px"><div style="text-align: center;"><font size="4"><b>Citadinos Términos y Condiciones</b></font></div>
-			  <p id="terminos" align="justify">
+			          <p id="terminos" align="justify">
               	 <b><br><br>[1] USTED ACUERDA MEDIANTE EL ACTO  DE LLAMAR A LA LÍNEA MUSICA O AL LEER CUALQUIER PARTE DE ESTOS  TÉRMINOS Y CONDICIONES QUE USTED NO, AHORA O NUNCA, (A) TRANSMITIRÁ  CUALQUIER MATERIAL A CUALQUIER PERSONA, VIVA O MUERTA, QUE SEA  CONSIDERABLE POR ESA PERSONA COMO DIFAMATORIO, DAÑINO, ILEGAL,  ARGUMENTATIVO O CONFUSO, Y QUE ADEMÁS (B) CUALQUIER SEMEJANZA ENTRE  USTED O SU FAMILIA Y LAS PERSONAS, LOS VEHÍCULOS O INSTRUMENTOS  MUSICALES VIVOS, MUERTOS, Y OTROS QUE APARECEN EN EL SITIO CITADINOS  ES TOTALMENTE INVOLUNTARIA Y QUE DE HABER PARECIDOS ENTONCES USTED  TOMARÁ MEDIDAS INMEDIATAS PARA EVITAR QUE ESTE TIPO DE SEMEJANZA  OCURRA DE NUEVO.<BR>            			<BR>
               		[2] CITADINOS NO SERÁ RESPONSABLE POR  CUALQUIER DAÑO O PÉRDIDA DE INGRESOS, BUENA VOLUNTAD, ENTUSIASMO O  TONO DE PIEL QUE SURJA DE O EN CONEXION CON EL USO O LA OTRA  INTERACCIÓN CON (A) LOS SITIOS WEB DE CITADINOS, (B) LAS RESEÑAS  ACERCA DEL SITIO CITADINOS, (C) LOS EMPLEADOS O EMPLEADOS POTENCIALES  DE CITADINOS PASADOS O PRESENTES, O (D) CUALQUIER SITIO WEB CON  ENLACES A O VINCULADOS DESDE EL SITIO WEB CITADINOS, DIRECTAMENTE O A  TRAVÉS DE OTROS SITIOS WEB.<BR><BR>
               		[3] REMEDIOS LEGALES. <u>YA QUE  CITADINOS SUFRIRÍA DAÑOS IRREPARABLES A UN GRADO IMPREVISIBLE SI  LAS SECCIONES [1] Y [2] NO SON ESPECÍFICAMENTE FORZADAS, CITADINOS  TENDRÁ DERECHO SIN MEDIAR FIANZA U OTRA GARANTÍA NI PRUEBA DE  DAÑOS, A DISPONER DE RECURSOS EQUITATIVOS Y ADECUADOS CON RESPECTO A  INCUMPLIMIENTOS DE ESTAS SECCIONES, ADEMÁS DE OTROS RECURSOS DE QUE  PUDIERA DISPONER.</u></b>
-              	</p></td>
+              	</p>
+              </td>
             </tr>
           </table>
           <p>&nbsp;</p>
-		  
         </TD>
+        <!-- BODY CONTENT -->
+
       </TR>
     </TABLE>
+    <!-- BODY CONTENT -->
+
+    <!-- FOOTER CONTENT -->
     <TABLE WIDTH=780px HEIGHT=17px BORDER=0px CELLSPACING=0px CELLPADDING=0px BGCOLOR=#EDEDED>
       <TR HEIGHT=17px>
         <TD ALIGN=RIGHT><FONT COLOR=BLACK FACE=Verdana SIZE=1><a rel="Copyright" href="http://www.w3.org/Consortium/Legal/ipr-notice#Copyright">Derechos reservados</a> &copy; 2012 <a href="http://www.w3.org/"><acronym title="World Wide Web Consortium">W3C</acronym></a>&reg;</FONT></TD>
       </TR>
     </TABLE>
-        <TD WIDTH=10px BACKGROUND=./img/border_right.gif><IMG SRC=./img/border_right.gif WIDTH=10px></TD>
+    <!-- FOOTER CONTENT -->
+
+      <TD WIDTH=10px BACKGROUND=./img/border_right.gif><IMG SRC=./img/border_right.gif WIDTH=10px></TD>
       </TR>
       <TR HEIGHT=10px>
         <TD WIDTH=10px HEIGHT=10px BACKGROUND=./img/border_bottom_left.gif><IMG SRC=./img/border_bottom_left.gif WIDTH=10px HEIGHT=10px></TD>
@@ -275,6 +347,6 @@
       </TR>
     </TABLE>
     </TD></TR></TR></TABLE>
-    
+
   </body>
 </html>
