changes in entradas

--- a/entradas.html
+++ b/entradas.html
@@ -234,7 +234,7 @@
                   </td>
                   <td valign="middle" align="left" width="120px" style="border:0px;margin:0px;padding:0px;">
                     <DIV>
-                      <img src="./img/telefon_lightgrey_bg.gif" alt="número de la línea de la música" border="0" valign="absmiddle">
+                      <img src="./img/telefon_lightgrey_bg.gif" alt="0800 MÚSICA" border="0" valign="absmiddle">
                     </div>
                   </td>
                 </table>
@@ -243,9 +243,10 @@
           </table>
           <p>&nbsp;</p>
           <table width="600px">
-            <tr align="left">
-              <th style="padding-bottom:10px;"><img src="./img/headline_ticket_prices.gif" border="0"></th>
-            </tr>
+          <!-- REVISAR TODO ESTO-->
+              <h2 class="titulo">
+                <font SIZE=4>Lista de precios</font>
+              </h2>
           </table>
           <DIV></DIV>
           <table width="600px" cellspacing="0" class="precios">
@@ -306,12 +307,20 @@
             </tr>
           </table>
           <table style="border:1px dashed silver;border-bottom:none;margin-top: 25px;" bgColor=#ededed width=600px>
-            <tr><td align="center">
-              <table width="550px" cellpadding="0" cellspacing="0" border="0"><tr>
-                <td valign="middle" align="right" width="430px" style="border:0px;margin:0px;padding:0px;"><DIV>Compre entradas llamando a la línea de la M U S I C A ---- llame ya!:&nbsp;</DIV></td>
-                <td valign="middle" align="left" width="120px" style="border:0px;margin:0px;padding:0px;"><img src="./img/telefon_lightgrey_bg.gif" alt="número de la línea de la música" border="0" valign="absmiddle"></td>
-              </tr></table>
-            </td></tr>
+            <tr>
+              <td align="center">
+                <table width="550px" cellpadding="0" cellspacing="0" border="0">
+                  <tr>
+                    <td valign="middle" align="right" width="430px" style="border:0px;margin:0px;padding:0px;">
+                      <div>Compre entradas llamando a la línea de la M U S I C A ---- llame ya!:&nbsp;</div>
+                    </td>
+                    <td valign="middle" align="left" width="120px" style="border:0px;margin:0px;padding:0px;">
+                      <img src="./img/telefon_lightgrey_bg.gif" alt="0800 MÚSICA" border="0" valign="absmiddle">
+                    </td>
+                  </tr>
+                </table>
+              </td>
+            </tr>
             <tr bgcolor="#ffffff" >
               <td style="padding:20px 5px 5px 5px"><div style="text-align: center;"><font size="4"><b>Citadinos Términos y Condiciones</b></font></div>
 			          <p id="terminos" align="justify">
