improvements in the tables

--- a/encuesta_gracias.html
+++ b/encuesta_gracias.html
@@ -220,51 +220,47 @@
 
                 <!-- TABLA DE RESULTADOS -->
                 <table width="560px" border="1" style="float:left; border: 1px dashed silver;" summary="Se muestran los diferentes votos otorgados a cada uno de los organos por cada fila según lo amo o lo odio">
-                <caption style="font-weight: bold; text-align: left;">Cuál es tu órgano favorito y cuál tu odiado?</caption>
-                <!-- REVISAR EL TEXTO -->
-                  <tr bgcolor="#DBDBDB">
-                    <td bgcolor="#ffffff" style="border-right: 1px dashed silver;">
-                      <!-- <p style="background:#DBDBDB;padding-top:3px;padding-bottom:2px;">
-                        <br>
-                      </p>
-                      <p style="margin-bottom:0px;padding-top:3px; padding-bottom:5px" align="right">
+                  <caption style="font-weight: bold; text-align: left;">
+                    Cuál es tu órgano favorito y cuál tu odiado?
+                  </caption>
+                  <!-- REVISAR EL TEXTO -->
+                  <thead>
+                    <tr bgcolor="#DBDBDB">
+                      <td bgcolor="#ffffff" style="border-right: 1px dashed silver;"></td>
+                      <th scope="col" title="question" width=70 align="left"><b>Pulmón</b></th>
+                      <th scope="col" title="question" width=70 align="left"><b>Páncreas</b></th>
+                      <th scope="col" title="question" width=70 align="left"><b>Bazo</b></th>
+                      <th scope="col" title="question" width=70 align="left"><b>Hígado</b></th>
+                      <th scope="col" title="question" width=70 align="left"><b>Piel</b></th>
+                      <th scope="col" title="question" width=70 align="left"><b>Cerebro</b></th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                    <tr>
+                      <th scope="row" style="margin-bottom:0px;padding-top:3px; padding-bottom:5px">
                         <strong>lo amo</strong>
-                      </p>
-                      <p style="margin-top:5px;background:#DBDBDB;padding-top:3px; padding-bottom:4px" align="right">
+                      </th>
+                      <td></td>
+                      <td>4</td>
+                      <td>10</td>
+                      <td>4</td>
+                      <td></td>
+                      <td>1</td>
+                    </tr>
+                    <tr>
+                    </tr>
+                    <tr bgcolor="#DBDBDB">
+                      <th scope="row" style="margin-top:5px;background:#DBDBDB;padding-top:3px; padding-bottom:4px">
                         <strong>lo odio</strong>
-                      </p> -->
-                    </td>
-                    <th title="question" width=70 align="left"><b>Pulmón</b></th>
-                    <th title="question" width=70 align="left"><b>Páncreas</b></th>
-                    <th title="question" width=70 align="left"><b>Bazo</b></th>
-                    <th title="question" width=70 align="left"><b>Hígado</b></th>
-                    <th title="question" width=70 align="left"><b>Piel</b></th>
-                    <th title="question" width=70 align="left"><b>Cerebro</b></th>
-                  </tr>
-                  <tr>
-                    <th style="margin-bottom:0px;padding-top:3px; padding-bottom:5px">
-                      <strong>lo amo</strong>
-                    </th>
-                    <td></td>
-                    <td>4</td>
-                    <td>10</td>
-                    <td>4</td>
-                    <td></td>
-                    <td>1</td>
-                  </tr>
-                  <tr>
-                  </tr>
-                  <tr bgcolor="#DBDBDB">
-                    <th style="margin-top:5px;background:#DBDBDB;padding-top:3px; padding-bottom:4px">
-                      <strong>lo odio</strong>
-                    </th>
-                    <td>5</td>
-                    <td>6</td>
-                    <td></td>
-                    <td>14</td>
-                    <td>1</td>
-                    <td></td>
-                  </tr>
+                      </th>
+                      <td>5</td>
+                      <td>6</td>
+                      <td></td>
+                      <td>14</td>
+                      <td>1</td>
+                      <td></td>
+                    </tr>
+                  </tbody>
                 </table>
                 <!-- TABLA DE RESULTADOS -->
 
