--- a/encuesta_gracias.html
+++ b/encuesta_gracias.html
@@ -115,7 +115,7 @@
         </TD>
       </TR>
       <TR HEIGHT=1px>
-        <TD WIDTH=780px BACKGROUND=./img/marker2_w.gif COLSPAN=5><IMG SRC=.img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+        <TD WIDTH=780px BACKGROUND=./img/marker2_w.gif COLSPAN=5><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
       </TR>
       <TR HEIGHT=25px>
         <TD COLSPAN=5>&nbsp;</TD>
