--- a/entradas.html
+++ b/entradas.html
@@ -27,6 +27,12 @@
         line-height: 13px;
         padding:0;
         margin:0;
+        list-style-position: inside;
+      }
+      #terminos li{
+        font-size: 13px;
+        font-weight: bold;
+        margin-bottom: 10px
       }
     </STYLE>
 
@@ -113,7 +119,7 @@
         </TD>
       </TR>
       <TR HEIGHT=1px>
-        <TD WIDTH=780px BACKGROUND=./img/marker2_w.gif COLSPAN=5><IMG SRC=.img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
+        <TD WIDTH=780px BACKGROUND=./img/marker2_w.gif COLSPAN=5><IMG SRC=./img/marker2_w.gif WIDTH=78px HEIGHT=1px></TD>
       </TR>
       <TR HEIGHT=25px>
         <TD COLSPAN=5>&nbsp;</TD>
@@ -216,7 +222,7 @@
 
               <td valign="top" align="center" width="300px">
               <div>
-                <table width="250px" border="1" bordercolor="#C0C0C0" rules="rows" summary="">
+                <table width="250px" border="1" bordercolor="#C0C0C0" rules="rows" summary="Tabla con fechas de los recitales dividos por las bandas">
                   <caption style="font-size: 15px"><b>fechas de los recitales</b></caption>
                   <thead>
                     <tr bgcolor="#A9B8BF">
@@ -363,12 +369,17 @@
               </td>
             </tr>
             <tr bgcolor="#ffffff" >
-              <td style="padding:20px 5px 5px 5px"><div style="text-align: center;"><font size="4"><b>Citadinos Términos y Condiciones</b></font></div>
-			          <p id="terminos" align="justify">
-              	 <b><br><br>[1] USTED ACUERDA MEDIANTE EL ACTO  DE LLAMAR A LA LÍNEA MUSICA O AL LEER CUALQUIER PARTE DE ESTOS  TÉRMINOS Y CONDICIONES QUE USTED NO, AHORA O NUNCA, (A) TRANSMITIRÁ  CUALQUIER MATERIAL A CUALQUIER PERSONA, VIVA O MUERTA, QUE SEA  CONSIDERABLE POR ESA PERSONA COMO DIFAMATORIO, DAÑINO, ILEGAL,  ARGUMENTATIVO O CONFUSO, Y QUE ADEMÁS (B) CUALQUIER SEMEJANZA ENTRE  USTED O SU FAMILIA Y LAS PERSONAS, LOS VEHÍCULOS O INSTRUMENTOS  MUSICALES VIVOS, MUERTOS, Y OTROS QUE APARECEN EN EL SITIO CITADINOS  ES TOTALMENTE INVOLUNTARIA Y QUE DE HABER PARECIDOS ENTONCES USTED  TOMARÁ MEDIDAS INMEDIATAS PARA EVITAR QUE ESTE TIPO DE SEMEJANZA  OCURRA DE NUEVO.<BR>            			<BR>
-              		[2] CITADINOS NO SERÁ RESPONSABLE POR  CUALQUIER DAÑO O PÉRDIDA DE INGRESOS, BUENA VOLUNTAD, ENTUSIASMO O  TONO DE PIEL QUE SURJA DE O EN CONEXION CON EL USO O LA OTRA  INTERACCIÓN CON (A) LOS SITIOS WEB DE CITADINOS, (B) LAS RESEÑAS  ACERCA DEL SITIO CITADINOS, (C) LOS EMPLEADOS O EMPLEADOS POTENCIALES  DE CITADINOS PASADOS O PRESENTES, O (D) CUALQUIER SITIO WEB CON  ENLACES A O VINCULADOS DESDE EL SITIO WEB CITADINOS, DIRECTAMENTE O A  TRAVÉS DE OTROS SITIOS WEB.<BR><BR>
-              		[3] REMEDIOS LEGALES. <u>YA QUE  CITADINOS SUFRIRÍA DAÑOS IRREPARABLES A UN GRADO IMPREVISIBLE SI  LAS SECCIONES [1] Y [2] NO SON ESPECÍFICAMENTE FORZADAS, CITADINOS  TENDRÁ DERECHO SIN MEDIAR FIANZA U OTRA GARANTÍA NI PRUEBA DE  DAÑOS, A DISPONER DE RECURSOS EQUITATIVOS Y ADECUADOS CON RESPECTO A  INCUMPLIMIENTOS DE ESTAS SECCIONES, ADEMÁS DE OTROS RECURSOS DE QUE  PUDIERA DISPONER.</u></b>
-              	</p>
+              <td style="padding:20px 5px 5px 5px">
+              <h2 style="text-align: center;">
+                <font size="4"><b>Citadinos Términos y Condiciones</b></font>
+              </h2>
+                <ol id="terminos">
+                  <li>USTED ACUERDA MEDIANTE EL ACTO  DE LLAMAR A LA LÍNEA MUSICA O AL LEER CUALQUIER PARTE DE ESTOS  TÉRMINOS Y CONDICIONES QUE USTED NO, AHORA O NUNCA, (A) TRANSMITIRÁ  CUALQUIER MATERIAL A CUALQUIER PERSONA, VIVA O MUERTA, QUE SEA  CONSIDERABLE POR ESA PERSONA COMO DIFAMATORIO, DAÑINO, ILEGAL,  ARGUMENTATIVO O CONFUSO, Y QUE ADEMÁS (B) CUALQUIER SEMEJANZA ENTRE  USTED O SU FAMILIA Y LAS PERSONAS, LOS VEHÍCULOS O INSTRUMENTOS  MUSICALES VIVOS, MUERTOS, Y OTROS QUE APARECEN EN EL SITIO CITADINOS  ES TOTALMENTE INVOLUNTARIA Y QUE DE HABER PARECIDOS ENTONCES USTED  TOMARÁ MEDIDAS INMEDIATAS PARA EVITAR QUE ESTE TIPO DE SEMEJANZA  OCURRA DE NUEVO.</li>
+
+                  <li>CITADINOS NO SERÁ RESPONSABLE POR  CUALQUIER DAÑO O PÉRDIDA DE INGRESOS, BUENA VOLUNTAD, ENTUSIASMO O  TONO DE PIEL QUE SURJA DE O EN CONEXION CON EL USO O LA OTRA  INTERACCIÓN CON (A) LOS SITIOS WEB DE CITADINOS, (B) LAS RESEÑAS  ACERCA DEL SITIO CITADINOS, (C) LOS EMPLEADOS O EMPLEADOS POTENCIALES  DE CITADINOS PASADOS O PRESENTES, O (D) CUALQUIER SITIO WEB CON  ENLACES A O VINCULADOS DESDE EL SITIO WEB CITADINOS, DIRECTAMENTE O A  TRAVÉS DE OTROS SITIOS WEB.</li>
+
+                  <li>REMEDIOS LEGALES. <u>YA QUE  CITADINOS SUFRIRÍA DAÑOS IRREPARABLES A UN GRADO IMPREVISIBLE SI  LAS SECCIONES [1] Y [2] NO SON ESPECÍFICAMENTE FORZADAS, CITADINOS  TENDRÁ DERECHO SIN MEDIAR FIANZA U OTRA GARANTÍA NI PRUEBA DE  DAÑOS, A DISPONER DE RECURSOS EQUITATIVOS Y ADECUADOS CON RESPECTO A  INCUMPLIMIENTOS DE ESTAS SECCIONES, ADEMÁS DE OTROS RECURSOS DE QUE  PUDIERA DISPONER.</u></li>
+                </ol>
               </td>
             </tr>
           </table>
